<resources>
    <string name="app_name">Single Player</string>
    <string name="app_label">X vs. O in Space</string>
    <string name="profile_label">Your Profile</string>
    <string name="log_in_activity">Log In</string>
    <string name="sign_up_activity">Sign Up</string>
    <string name="reset_password_activity">Reset Password</string>

    <!-- Firebase strings -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="online_users_activity">Multi Player</string>

    <string name="hint_name">Fullname</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- ProfileActivity and ProfileViewModel-->
    <string name="invalid_field">Field can\'t be empty</string>
    <string name="last_name_too_long">Last name too long</string>
    <string name="first_name_too_long">First name too long</string>

    <string name="uploading_image">Uploading image...</string>
    <string name="please_wait">Please wait...</string>

    <!-- activity_login.xml -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>

    <!-- activity_signup.xml -->
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="about">About</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="submit_button">Submit</string>

    <string name="player_x">Player X:</string>
    <string name="player_y">Player Y:</string>

    <string name="player_x_won">Player 1 has won! (X)</string>
    <string name="player_y_won">Player 2 has won! (O)</string>
    <string name="draw">It\'s a draw!</string>

    <string name="home_menu" translatable="false">Home</string>
    <string name="new_round_menu">New Round</string>
    <string name="reset_game_menu">Reset Game</string>
    <string name="always_win_menu">Always win</string>
    <string name="settings_menu">Settings</string>
    <string name="log_out_menu">Log out</string>

    <string name="user_id" translatable="false">ID</string>
    <string name="send_request">Send request to</string>
    <string name="accept_request">Accept request from</string>

    <string name="please_register">Please register</string>
    <string name="enter_email_password">Enter your email and password for registration</string>
    <string name="register">Register</string>
    <string name="back">Back</string>

    <string name="new_game">New Game</string>

    <!-- Alert Dialog-->
    <string name="alert_dialog_title">Accept invitation</string>
    <string name="alert_dialog_content"> %1$s has joined your game, do you want to accept the challenge?</string>
    <string name="alert_dialog_yes">YES</string>
    <string name="alert_dialog_no">NO</string>

</resources>
