<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/home_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_new_round"
        android:orderInCategory="1"
        android:title="@string/new_round_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="2"
        android:title="@string/reset_game_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_watch_video"
        android:orderInCategory="3"
        android:title="@string/always_win_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/settings_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="5"
        android:title="@string/log_out_menu"
        app:showAsAction="collapseActionView" />
</menu>