<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.xvso.firebase.ProfileActivity">

    <data>
        <variable
            name="viewModelProfile"
            type="com.example.xvso.viewmodel.ProfileViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <com.kienht.csiv.CircleSliceImageView
                android:id="@+id/profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="4dp"
                app:civ_mode="2"
                app:profileImage="@{viewModelProfile.userLiveData.imageUrl}"/>

            <TextView
                android:id="@+id/user_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:id="@+id/email_address_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white" />
        </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linear_layout_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/first_name_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/first_name"
                            android:textSize="@dimen/text_size_medium" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="10">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/first_name_editview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:text="@={viewModelProfile.userLiveData.firstName}"
                                app:errorFirstName="@{viewModelProfile.isFirstNameValid}"
                                android:maxLines="1"
                                android:textSize="@dimen/text_size_medium" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/last_name_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/last_name"
                            android:textSize="@dimen/text_size_medium" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="10">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/last_name_editview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={viewModelProfile.userLiveData.lastName}"
                                app:errorLastName="@{viewModelProfile.isLastNameValid}"
                                android:textSize="@dimen/text_size_medium" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/email_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/e_mail"
                            android:textSize="@dimen/text_size_medium" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="30"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email_editview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:text="@={viewModelProfile.userLiveData.emailAddress}"
                                app:errorEmail="@{viewModelProfile.isEmailValid}"
                                android:maxLines="1"
                                android:textSize="@dimen/text_size_medium" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/password_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/password"
                            android:textSize="@dimen/text_size_medium" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="10"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password_editview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:text="@={viewModelProfile.userLiveData.password}"
                                app:errorPassword="@{viewModelProfile.isPasswordValid}"
                                android:maxLines="1"
                                android:textSize="@dimen/text_size_medium" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit_button"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:onClick="@{()-> viewModelProfile.submitForm()}"/>
    </RelativeLayout>
</layout>